--- a/public/style/css/main.css
+++ b/public/style/css/main.css
@@ -19,3 +19,75 @@
 #folio h2{
     text-align: center;
 }
+#folio div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+}
+#folio div div{
+    height: 198px;
+    width: auto;
+}
+#folio img{
+    height: 100%;
+    width: 100%;
+    background-color: blue;
+    border-radius: 10px;
+}
+#folio{
+    padding: 80px;
+    padding-left: 222px;
+    padding-right: 222px;
+}
+main{
+    margin: 0;
+}
+#about div{
+    display: flex;
+    justify-content: center;
+}
+#about{
+    padding: 80px;
+    padding-left: 500px;
+    padding-right: 500px;
+}
+#about h2{
+    text-align: center;
+}
+#contact form{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+#contact{
+    padding: 100px;
+    padding-left: 500px;
+    padding-right: 500px;
+}
+#contact input::placeholder{
+    color: rgb(120, 120, 145);
+}
+#contact input{
+    border: none;
+}
+#contact hr{
+    border: none;
+    background-color: rgb(237, 239, 242);
+    height: 1px;
+    width: 100%;
+}
+#contact textarea{
+    border: none;
+}
+#contact textarea::placeholder{
+    color: rgb(120, 120, 145);
+}
+#contact button{
+    background-color: rgb(220, 53, 69);
+    color: white;
+    height: 55px;
+    width: 85px;
+    border: none;
+    border-radius: 10px;
+}
