--- a/public/style/css/footer.css
+++ b/public/style/css/footer.css
@@ -9,20 +9,38 @@ footer div{
 }
 footer>div:first-child{
     align-items: flex-start;
-    gap: 40px;
+    justify-content: center;
+    flex: 1 auto;
     background-color: rgb(44, 62, 80);
 }
 footer i{
     color: white;
+    font-size: 20px;
+}
+footer div:nth-of-type(2) div div{
     border: 1px white solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
-    font-size: 150px;
-    gap: 20px;
-
+    height: 42px;
+    width: 42px;
+}
+footer div:nth-of-type(2) div:last-child{
+    gap: 10px;
 }
 footer>div>div{
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+footer>div:first-child>div{
+    width: 25%;
+    text-align: center;
 }
 footer>div:last-child{
     background-color: rgb(26, 37, 47);
+}
+span{
+    color: rgb(36, 143, 129);
 }
