--- a/public/style/css/main.css
+++ b/public/style/css/main.css
@@ -11,10 +11,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 522px;
+}
+#start h1{
+    font-size: 52px;
+    font-weight: 750;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 #start img{
-    height: 100px;
-    width: 100px;
+    width: 180px;
+    height: 220px;
 }
 #folio h2{
     text-align: center;
