--- a/public/style/css/main.css
+++ b/public/style/css/main.css
@@ -54,42 +54,51 @@
 main{
     margin: 0;
 }
-#about div{
+#about div div{
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+#about{
+    min-height: 409px;
     display: flex;
     justify-content: center;
 }
-#about{
-    padding: 80px;
-    padding-left: 500px;
-    padding-right: 500px;
-}
 #about h2{
     text-align: center;
+    font-size: 36px;
+}
+#about>div{
+    width: 50%;
+}
+#about>div>div>p{
+    width: 40%;
 }
 #contact form{
     display: flex;
     flex-direction: column;
-    gap: 30px;
 }
 #contact{
-    padding: 100px;
-    padding-left: 500px;
-    padding-right: 500px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+#contact h2{
+    text-align: center;
 }
 #contact input::placeholder{
     color: rgb(120, 120, 145);
 }
-#contact input{
+#contact input,#contact textarea{
     border: none;
+    padding-top: 8vh;
+    padding-bottom: 8vh;
 }
 #contact hr{
     border: none;
     background-color: rgb(237, 239, 242);
     height: 1px;
     width: 100%;
-}
-#contact textarea{
-    border: none;
 }
 #contact textarea::placeholder{
     color: rgb(120, 120, 145);
@@ -101,4 +110,7 @@ main{
     width: 85px;
     border: none;
     border-radius: 10px;
+}
+#contact div{
+    width: 38%;
 }
