--- a/public/style/css/footer.css
+++ b/public/style/css/footer.css
@@ -10,7 +10,9 @@ footer div{
 footer>div:first-child{
     align-items: flex-start;
     justify-content: center;
-    flex: 1 auto;
+    flex: 3 auto;
+    min-height: 340px;
+    padding-top: 50px;
     background-color: rgb(44, 62, 80);
 }
 footer i{
@@ -40,7 +42,11 @@ footer>div:first-child>div{
 }
 footer>div:last-child{
     background-color: rgb(26, 37, 47);
+    flex: 1;
 }
 span{
     color: rgb(36, 143, 129);
+}
+footer h3{
+    padding-bottom: 10px;
 }
