--- a/public/style/css/header.css
+++ b/public/style/css/header.css
@@ -28,7 +28,7 @@ header div:nth-of-type(2){
     gap: 10px;
     justify-content: center;    
     font-size: 14px;
-    font-weight: 500
+    font-weight: 500;
 }
 @media (max-width:675px){
     header{
