--- a/public/style/css/main.css
+++ b/public/style/css/main.css
@@ -91,8 +91,8 @@ main{
 }
 #contact input,#contact textarea{
     border: none;
-    padding-top: 8vh;
-    padding-bottom: 8vh;
+    margin-top: 8vh;
+    margin-bottom: 8vh;
 }
 #contact hr{
     border: none;
